--- a/index.html
+++ b/index.html
@@ -25,19 +25,13 @@
             <img src="//cdn.shopify.com/s/files/1/1775/8583/t/1/assets/cityscape-line2.png?11838297021386793225" alt="cityscape">
         </div>
         <div class="nav-wrapper db">
-            <a href="index.html" class="brand-logo"><i class="material-icons">camera</i>Gallery</a>
+            <a href="index.html" class="brand-logo"><i class="material-icons">camera</i>Logo</a>
             <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
             <ul class="bt hide-on-med-and-down">
-                <li><a href="/pages/demo">Gallery</a></li>
+                <li><a href="/pages/demo">Tentang Kami</a></li>
                 <li><a href="/pages/blog">Blog</a></li>
-                <li><a href="/pages/docs">Docs</a></li>
-                <li class="k"><a class='dropdown-button' href='#!' data-activates='feature-dropdown' data-belowOrigin="true" data-constrainWidth="false">Features<i class="material-icons bt">arrow_drop_down</i></a></li>
-            </ul>
-            <!-- Dropdown Structure -->
-            <ul id='feature-dropdown' class='dropdown-content'>
-                <li><a href="/pages/full-header">Fullscreen Header</a></li>
-                <li><a href="/pages/horizontal">Horizontal Style</a></li>
-                <li><a href="/pages/no-image">No Image Expand</a></li>
+                <li><a href="/pages/docs">Galeri</a></li>
+                <li><a href="/pages/docs">Kontak</a></li>
             </ul>
         </div>
         <div class="nav-header valign-wrapper">
