--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             <a href="index.html" class="brand-logo"><i class="material-icons">camera</i>Logo</a>
             <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
             <ul class="bt hide-on-med-and-down">
-                <li><a href="/pages/demo">Tentang Kami</a></li>
-                <li><a href="/pages/blog">Blog</a></li>
-                <li><a href="/pages/docs">Galeri</a></li>
-                <li><a href="/pages/docs">Kontak</a></li>
+                <li><a href="tentang-kami.html">Tentang Kami</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="galeri.html">Galeri</a></li>
+                <li><a href="kontak.html">Kontak</a></li>
             </ul>
         </div>
         <div class="nav-header valign-wrapper">
