add class active menu

--- a/galeri.html
+++ b/galeri.html
@@ -28,7 +28,7 @@
             <ul class="bt hide-on-med-and-down">
                 <li><a href="tentang-kami.html">Tentang Kami</a></li>
                 <li><a href="blog.html">Blog</a></li>
-                <li><a href="galeri.html">Galeri</a></li>
+                <li class="k"><a href="galeri.html">Galeri</a></li>
                 <li><a href="kontak.html">Kontak</a></li>
             </ul>
             <div class="nav-header de">
