--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@
             <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
             <ul class="bt hide-on-med-and-down">
                 <li><a href="tentang-kami.html">Tentang Kami</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <li class="k"><a href="blog.html">Blog</a></li>
                 <li><a href="galeri.html">Galeri</a></li>
                 <li><a href="kontak.html">Kontak</a></li>
             </ul>
