--- a/kontak.html
+++ b/kontak.html
@@ -29,7 +29,7 @@
                 <li><a href="tentang-kami.html">Tentang Kami</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="galeri.html">Galeri</a></li>
-                <li><a href="kontak.html">Kontak</a></li>
+                <li class="k"><a href="kontak.html">Kontak</a></li>
             </ul>
             <div class="nav-header de">
                 <h1>KONTAK</h1>
