add materialize css

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- Stylesheet -->
     <link href="assets/css/senada.css" rel="stylesheet">
     <link href="assets/css/custom.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="bower_components/materialize/dist/css/materialize.css">
     <!-- Material Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="canonical" href="https://themes.materializecss.com/pages/full-header" />
