delete filter mansory

--- a/tentang-kami.html
+++ b/tentang-kami.html
@@ -36,17 +36,6 @@
                 <div class="ge">My life</div>
             </div>
         </div>
-        <!-- Fixed Masonry Filters -->
-        <div class="categories-wrapper ao darken-3">
-            <div class="categories-container">
-                <ul class="categories db">
-                    <li class="k"><a href="#all">All</a></li>
-                    <li><a href="#polygon">Polygon</a></li>
-                    <li><a href="#bigbang">Big Bang</a></li>
-                    <li><a href="#sacred">Sacred Geometry</a></li>
-                </ul>
-            </div>
-        </div>
     </nav>
     <ul class="side-nav" id="nav-mobile">
         <li><a href="/pages/demo"><i class="material-icons">camera</i>Gallery</a></li>
@@ -63,7 +52,7 @@
                 <div class="d hx hf gu gallery-item gallery-expand ce polygon">
                     <div class="gallery-curve-wrapper">
                         <a class="gallery-cover gray">
-                            <img class="responsive-img" src="//cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-aquamarine.jpg?11838297021386793225" alt="placeholder" crossOrigin="anonymous">
+                            <img class="responsive-img" src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-aquamarine.jpg?11838297021386793225" alt="placeholder" crossOrigin="anonymous">
                         </a>
                         <div class="gallery-header">
                             <span>Aquamarine</span>
@@ -95,7 +84,7 @@
                 <div class="d hx hf gu gallery-item gallery-expand ce polygon">
                     <div class="gallery-curve-wrapper">
                         <a class="gallery-cover gray">
-                            <img class="responsive-img" src="//cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-sun.jpg?11838297021386793225" alt="placeholder" crossOrigin="anonymous">
+                            <img class="responsive-img" src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-aquamarine.jpg?11838297021386793225" alt="placeholder" crossOrigin="anonymous">
                         </a>
                         <div class="gallery-header">
                             <span>Sun</span>
@@ -127,7 +116,7 @@
                 <div class="d hx hf gu gallery-item gallery-expand ce bigbang">
                     <div class="gallery-curve-wrapper">
                         <a class="gallery-cover gray">
-                            <img class="responsive-img" src="//cdn.shopify.com/s/files/1/1775/8583/t/1/assets/bigbang1.png?11838297021386793225" alt="placeholder" crossOrigin="anonymous">
+                            <img class="responsive-img" src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-aquamarine.jpg?11838297021386793225" alt="placeholder" crossOrigin="anonymous">
                         </a>
                         <div class="gallery-header">
                             <span>Big Bang 1</span>
